[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bombe.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )
Bombe = ExtResource( 3 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 300 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[connection signal="plant_bombe" from="Player" to="." method="bombe_insert"]
